--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.43",
+    "react-icons": "^4.10.1",
     "zod": "^3.20.6"
   },
   "devDependencies": {
