--- a/package.json
+++ b/package.json
@@ -19,13 +19,20 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "7.43",
     "react-icons": "^4.10.1",
+    "react-lottie": "^1.2.3",
     "zod": "^3.20.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-lottie": "^1.2.6",
     "@vitejs/plugin-react": "^4.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
+  },
+  "overrides": {
+    "react-lottie": {
+      "react": "^0.14.7 || ^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0"
+    }
   }
 }
