--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-hook-form": "7.43",
     "react-icons": "^4.10.1",
     "react-lottie": "^1.2.3",
+    "react-slideshow-image": "^4.2.1",
+    "swiper": "^10.0.4",
     "zod": "^3.20.6"
   },
   "devDependencies": {
